[package]
name = "andromeda-timelock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = "0.16.0"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
andromeda-protocol = { version = "0.1.0", path = "../../packages/andromeda_protocol" }
schemars = "0.8.3"
cw-storage-plus = "0.9.1"
cw721 = "0.9.1"