[package]
name = "andromeda-token"
version = "0.1.0"
authors = ["Connor Barr <crnbarr@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "0.16.0"
cw-storage-plus = "0.9.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
andromeda-protocol = { version = "0.1.0", path = "../../packages/andromeda_protocol" }
cw721 = "0.9.1"
terra-cosmwasm = { version = "2.2.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
