[package]
name = "e2e"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
publish = false

# [[test]]
# name = "validator_staking"

# [[test]]
# name = "crowdfund"

# [[test]]
# name = "socket_osmosis"

# [[test]]
# name = "socket_astroport"

[dependencies]
serde.workspace = true
tokio = "1.45.1"
cw-orch = { workspace = true }
cw-orch-daemon = "0.29.1"
rstest = { workspace = true }
lazy_static = "1.4.0"
env_logger = "0.11.8"
osmosis-std = "0.27.0"

andromeda-testing-e2e = { workspace = true }

andromeda-app-contract = { path = "../../contracts/app/andromeda-app-contract", features = [
    "testing",
] }

andromeda-cw20 = { path = "../../contracts/fungible-tokens/andromeda-cw20", features = [
    "testing",
] }

andromeda-cw721 = { path = "../../contracts/non-fungible-tokens/andromeda-cw721", features = [
    "testing",
] }

andromeda-crowdfund = { path = "../../contracts/non-fungible-tokens/andromeda-crowdfund", features = [
    "testing",
] }

andromeda-splitter = { path = "../../contracts/finance/andromeda-splitter", features = [
    "testing",
] }

andromeda-validator-staking = { path = "../../contracts/finance/andromeda-validator-staking", features = [
    "testing",
] }

andromeda-socket-osmosis = { path = "../../contracts/socket/andromeda-socket-osmosis", features = [
    "testing",
] }

andromeda-osmosis-token-factory = { path = "../../contracts/socket/andromeda-osmosis-token-factory", features = [
    "testing",
] }

andromeda-socket-astroport = { path = "../../contracts/socket/andromeda-socket-astroport", features = [
    "testing",
] }
andromeda-kernel = {path = "../../contracts/os/andromeda-kernel"}

andromeda-finance = { workspace = true }
andromeda-std = { workspace = true }
andromeda-app = { workspace = true }
andromeda-fungible-tokens = { workspace = true }
andromeda-non-fungible-tokens = { workspace = true }
andromeda-socket = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking"] }
cw20.workspace = true
cw721.workspace = true
