[package]
name = "andromeda-app-contract"
version = "0.2.1"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
semver = { workspace = true }
andromeda-app = { path = "../../../packages/andromeda-app" }
andromeda-std = { workspace = true, features = ["instantiate"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { workspace = true, optional = true }
andromeda-testing = { workspace = true }

[dev-dependencies]
prost = "0.9"

[features]
testing = ["cw-multi-test"]
