[package]
name = "andromeda-app-contract"
version = "1.0.0-rc.1"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
andromeda-app = { path = "../../../packages/andromeda-app" }
andromeda-std = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { version = "1.0.0", optional = true }

[dev-dependencies]
prost = "0.9"

[features]
testing = ["cw-multi-test"]
