[package]
name = "andromeda-app-contract"
version = "1.2.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
andromeda-app = { workspace = true }
andromeda-std = { workspace = true }
enum-repr = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { workspace = true, optional = true }
andromeda-testing = { workspace = true, optional = true }
cw-orch = { workspace = true }
cw-orch-daemon = "0.24.2"

[features]
testing = ["cw-multi-test", "andromeda-testing"]
library = []
