[package]
name = "andromeda-factory"
version = "0.1.0"
authors = ["Connor Barr <crnbarr@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.1.4"
cosmwasm-schema = "1.1.4"
cw-storage-plus = "0.15.0"
schemars = "0.8.10"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
cw721 = "0.15.0"
cw2 = "0.15.0"
semver = "1"

andromeda-app = { version = "0.1.0", path = "../../../packages/andromeda-app" }
ado-base = { path = "../../../packages/ado-base", version = "0.1.0" }
common = { version = "0.1.0", path = "../../../packages/common" }
cw-multi-test = "0.16.0"

[dev-dependencies]
andromeda-testing = { version = "0.1.0", path = "../../../packages/andromeda-testing" }
