[package]
name = "andromeda-mission"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "0.16.7" }
cw-storage-plus = "0.9.1"
cw2 = "0.9.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }

andromeda-app = { version = "0.1.0", path = "../../../packages/andromeda-app" }
ado-base = { path = "../../../packages/ado_base", version = "0.1.0", features=["instantiate"] }
common = { version = "0.1.0", path = "../../../packages/common" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
andromeda-protocol = { version = "0.1.0", path = "../../../packages/andromeda_protocol" }
