[package]
name = "andromeda-counter"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
testing = ["cw-multi-test"]

[dependencies]
cosmwasm-std = "1.0.0"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.3"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
cw20 = "0.13.4"
cw-utils = "0.16.0"
semver = "1"
base64 = "0.13.1"


andromeda-automation = { version = "0.1.0", path = "../../../packages/andromeda-automation" }

ado-base = { path = "../../../packages/ado-base", version = "0.1.0" }
common = { version = "0.1.0", path = "../../../packages/common" }
andromeda-os = { version = "0.1.0", path = "../../../packages/andromeda-os" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { version = "0.16.0", optional = true }

[dev-dependencies]
cosmwasm-schema = "1.0.0"

andromeda-testing = { version = "0.1.0", path = "../../../packages/andromeda-testing" }
