[package]
name = "andromeda-evaluation"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.4"
cosmwasm-schema = "1.1.4"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.10"
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
cw20 = "0.15.0"
cw-utils = "0.15.0"
semver = "1"


andromeda-finance = { version = "0.1.0", path = "../../../packages/andromeda-finance" }
andromeda-automation = { version = "0.1.0", path = "../../../packages/andromeda-automation" }

ado-base = { path = "../../../packages/ado-base", version = "0.1.0", features = ["modules"] }
common = { version = "0.1.0", path = "../../../packages/common" }

[dev-dependencies]

andromeda-testing = { version = "0.1.0", path = "../../../packages/andromeda-testing" }
